--- a/assignments/Personal Portofolio/style.css
+++ b/assignments/Personal Portofolio/style.css
@@ -1,5 +1,5 @@
 * {
-    cursor: url(images/cursoor.png), auto;
+    cursor: url(images/butterfly.png), auto;
 
 
 }
@@ -21,19 +21,13 @@ h1 {
     text-align: center;
     font-size: 40px;
     font-weight: bold;
-    color: transparent;
+    color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-image: url(images/backgroundimg.jpeg);
-    background-size: cover;
-    background-position: center;
-    background-clip: text;
-    -webkit-background-clip: text;
-
     text-transform: uppercase;
-    
-
 
 }
+
+
 
 .pages {
     padding: 30px;
@@ -44,10 +38,10 @@ h1 {
 }
 
 
-
 .li0 {
     display: inline;
     list-style-type: none;
+
 }
 
 
@@ -66,7 +60,8 @@ h1 {
     background-size: 200% 100%;
     background-position: right bottom;
     transition: all .5s ease-out;
-    
+
+
 
 }
 
@@ -75,7 +70,7 @@ h1 {
 .myPage:hover {
     background-color: rgb(14, 28, 64);
     background-position: left bottom;
-border-radius: 1;
+    border-radius: 1;
 
 }
 
@@ -126,7 +121,6 @@ footer {
 
 .article1:hover {
     background-color: rgba(84, 166, 166, 0.962);
-
     border: 3px solid #000000
 }
 
@@ -152,17 +146,15 @@ h2 {
 
 }
 
-li {
-    margin-top: -2px;
-    padding-top: -2px;
-   
-}
+
 
 
 .li1 {
     background-color: rgba(255, 255, 255, 0.532);
     border-radius: 15px;
-    margin-top: -2px;
+    margin: 10px;
+    padding-top: -1px;
+    content: normal;
 
 
 
@@ -171,6 +163,7 @@ li {
 .li1:hover {
     background-color: white;
     border-radius: 10px;
+
 }
 
 h4 {
@@ -184,10 +177,10 @@ h4 {
 
 .education {
     font-size: 18px;
-   
     list-style: square;
-    margin-top: -2px;
-    
+    margin-top: -10px;
+    padding: 2px;
+
 }
 
 .article3 {
@@ -270,13 +263,18 @@ th {
     background-color: rgba(105, 245, 252, 0.791);
     transition: 1s;
     border: 3px solid black;
-  
+
+
 }
 
 .imgpro {
     width: auto;
     position: relative;
+
 }
+
+
+
 
 
 
@@ -329,12 +327,13 @@ th {
 .form1:hover {
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.701);
+    border: 3px solid black;
 
 }
 
 .connect {
 
-    background-color: rgba(249, 242, 242, 0.46);
+    background-color: rgba(249, 242, 242, 0.288);
     text-align: center;
     margin-left: 200px;
     margin-right: 200px;
@@ -342,6 +341,10 @@ th {
 
 }
 
+.connect:hover {
+    background-color: rgba(255, 255, 255, 0.604);
+    border: 3px solid black;
+}
 
 
 
@@ -383,12 +386,17 @@ textarea {
     height: 50px;
     text-align: center;
 
+
+}
+
+.socialmedia:hover {
+    transform: scale(1.3);
 }
 
 
 
 footer {
-    background-color: rgb(49, 49, 49);
+    background-color: rgb(69, 69, 69);
     color: white;
     text-align: center;
 
