--- a/assignments/Changing the font/style.css
+++ b/assignments/Changing the font/style.css
@@ -1,8 +1,5 @@
-header{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
 
-.article1{
+header, .article1 {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 
 }
