--- a/assignments/Pseudo Puzzle/style.css
+++ b/assignments/Pseudo Puzzle/style.css
@@ -13,8 +13,9 @@ h1 { text-align: center;
 
 .article1:hover{
     background-color: rgb(195, 10, 41);
+   
 }
 
-.article1::first-letter{
+.article1:hover:first-letter{
     initial-letter: 3;
 }
