--- a/assignments/Flexbox Blogposts/style.css
+++ b/assignments/Flexbox Blogposts/style.css
@@ -57,6 +57,7 @@ main {
 .head {
     justify-content: space-between;
     line-height: 30px;
+    padding: 20px 0 10px 0;
 
 }
 
@@ -64,7 +65,7 @@ main {
 .tittle h1 {
     font-size: 30px;
     font-weight: 900;
-    padding: 10px 0;
+    
 }
 
 Img {
@@ -76,7 +77,7 @@ Img {
 .fontGray {
     color: rgba(156, 154, 154, 0.841);
     font-family: "Lucida Console", "Courier New", monospace;
-    ;
+    
 
 }
 
