--- a/assignments/Creating a card/style.css
+++ b/assignments/Creating a card/style.css
@@ -9,6 +9,7 @@
 
 main{
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .card {
@@ -30,8 +31,15 @@ main{
     height: calc(80% - 5px);
     background-color: #A01F29;
     border-top: 5px solid black;
-    justify-content: center;
-    align-items: center;
+    overflow: hidden;
+}
+
+
+ .card-image img{
+    width:60%;
+    position: absolute;
+    left: 60px;
+   
 }
 
 .card-text {
@@ -85,12 +93,4 @@ main{
     font-weight: 600;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #fff;
-}
-
-img {
-    position: absolute;
-    top: 5px;
-    right: 40px;
-    width: 60%;
-
 }
