--- a/assignments/An animated form/style.css
+++ b/assignments/An animated form/style.css
@@ -3,8 +3,9 @@ form{
     width: 50%;
     margin: 20px;
     padding: 20px;
-    
+   
 }
+
 
 form .text{
     width: 80%;
@@ -16,4 +17,13 @@ form .submit{
     font-size: 15px;
     background-color: rgb(90, 41, 165);
     color: white;
+}
+
+
+
+
+
+
+form>input:focus{
+    outline: 1px solid blue;
 }
