--- a/projects/Final Project CSS/style.css
+++ b/projects/Final Project CSS/style.css
@@ -311,13 +311,13 @@ header>div>div>form>input:focus {
     left: 50%;
     transform: translateX(-50%);
     opacity: 0;
-    transition: opacity 0.2s ease;
+    transition: opacity 0.4s ease;
 
 }
 
 .ListingCard:hover .cardOptions {
     opacity: 1;
-    transition: opacity 0.4s ease;
+    transition: opacity 0.6s ease;
 }
 
 
@@ -330,8 +330,7 @@ header>div>div>form>input:focus {
     }
 
     .TopLocations {
-        display: flex;
-        flex-direction: column;
+        grid-template-columns: 1fr;
 
     }
 
