--- a/projects/Final Project CSS/style.css
+++ b/projects/Final Project CSS/style.css
@@ -268,6 +268,7 @@ header>div>div>form>input:focus {
 .TopLocations {
     -ms-grid-columns: 1fr 3fr;
     grid-template-columns: 1fr 3fr;
+    gap: 20px;
 }
 
 
